deploy/k3d/keycloak.yml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: https
      port: 8443
      targetPort: 8443
  selector:
    app: keycloak
  type: LoadBalancer
--- #Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:23.0.3
          args: ["start-dev"]
          ports:
            - name: http
              containerPort: 8080
            - name: https
              containerPort: 8443
          readinessProbe:
            httpGet:
              path: /realms/master
              port: 8080

--- #Gateway
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: keycloak-gateway
  namespace: keycloak
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    - port:
        number: 7080
        name: http
        protocol: HTTP
      hosts:
        - "*"

--- #VirtualService
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: keycloak-virtualservice
  namespace: keycloak
spec:
  hosts:
    - "*"
  gateways:
    - comments-gateway
  http:
    - route:
        - destination:
            port:
              number: 8080
            host: keycloak.keycloak.svc.cluster.local
#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: keycloak
#  labels:
#    app: keycloak
#spec:
#  ports:
#    - name: http
#      port: 8080
#      targetPort: 8080
#  selector:
#    app: keycloak
#  type: LoadBalancer
#---
#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  name: keycloak
#  labels:
#    app: keycloak
#spec:
#  replicas: 1
#  selector:
#    matchLabels:
#      app: keycloak
#  template:
#    metadata:
#      labels:
#        app: keycloak
#    spec:
#      containers:
#        - name: keycloak
#          image: quay.io/keycloak/keycloak:23.0.3
#          args: ["start-dev"]
#          env:
#            - name: KEYCLOAK_ADMIN
#              value: "admin"
#            - name: KEYCLOAK_ADMIN_PASSWORD
#              value: "admin"
#            - name: KC_PROXY
#              value: "edge"
#          ports:
#            - name: http
#              containerPort: 8080
#          readinessProbe:
#            httpGet:
#              path: /realms/master
#              port: 8080
