deploy/k3d/app.yml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: comments
  namespace: crowdproj-comments

--- #Service
apiVersion: v1
kind: Service
metadata:
  name: comments
  namespace: crowdproj-comments
  labels:
    app: comments
    service: comments
spec:
  ports:
    - name: http
      port: 8000
      targetPort: 8080
  selector:
    app: comments
--- #Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments
  namespace: crowdproj-comments
  labels:
    app: comments
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: stellalupus/crowdproj-comments
          resources:
            requests:
              cpu: "100m"
          imagePullPolicy: Always
          ports:
            - containerPort: 8080

--- #Gateway
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: comments-gateway
  namespace: crowdproj-comments
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"

--- #VirtualService
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: comments-virtualservice
  namespace: crowdproj-comments
spec:
  hosts:
    - "*"
  gateways:
    - comments-gateway
  http:
    - route:
        - destination:
            port:
              number: 8000
            host: comments.crowdproj-comments.svc.cluster.local

--- #RequestAuthentication
apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
  name: comments-authentication
  namespace: crowdproj-comments
spec:
  selector:
    matchLabels:
      app: comments
  jwtRules:
    - issuer: "http://localhost:7080/realms/crowdproj"
      jwksUri: "http://keycloak.keycloak.svc.cluster.local:8080/realms/crowdproj/protocol/openid-connect/certs"
      outputPayloadToHeader: jwt-parsed

--- #AuthorizationPolicy
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: comments-auth
spec:
  selector:
    matchLabels:
      app: comments
  rules:
    - from:
        - source:
            requestPrincipals: ["*"]
